@@ -181,7 +181,6 @@ require([
     'dijit/form/NumberSpinner',
     'dijit/form/FilteringSelect',
     'dijit/form/Button',
-    'dijit/form/DateTextBox',
     'dijit/form/TimeTextBox',
 
     'dojox/form/Uploader',
@@ -199,7 +198,7 @@ require([
 
     'dojo/domReady!'
 ], function (Form, ValidationTextBox, TextBox, NumberSpinner, FilteringSelect,
-             Button, DateTextBox, TimeTextBox, Uploader, FileList, JsonRest,
+             Button, TimeTextBox, Uploader, FileList, JsonRest,
              date, stamp, locale, submitForm, util) {
 
     var url;
